<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_phone_booster"
        android:icon="@drawable/ic_tab_fire"
        android:title="@string/phone_booster" />
    <item
        android:id="@+id/navigation_battery_optimizer"
        android:icon="@drawable/ic_tab_battery"
        android:title="@string/battery_optimizer" />
    <item
        android:id="@+id/navigation_cpu_cooler"
        android:icon="@drawable/ic_tab_snow"
        android:title="@string/cpu_cooler" />
    <item
        android:id="@+id/navigation_junk_cleaner"
        android:icon="@drawable/ic_tab_trash"
        android:title="@string/junk_cleaner" />
    <item
        android:id="@+id/navigation_file_manager"
        android:icon="@drawable/ic_tab_file"
        android:title="@string/file_manager" />


</menu>