<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.phonebooster.PhoneBoosterFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="FULL_BANNER"
        app:adUnitId="@string/phone_booster_ads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_booster"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dots"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.53" />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:indeterminate="false"
        android:max="100"
        android:maxWidth="5dp"
        android:maxHeight="5dp"
        android:progressDrawable="@drawable/progress_bar_circle_red"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenter2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarCircle"
        app:layout_constraintEnd_toEndOf="@+id/progressBarCircle"
        app:layout_constraintStart_toStartOf="@+id/progressBarCircle"
        app:layout_constraintTop_toTopOf="@+id/progressBarCircle">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Storage"
            android:textColor="@color/magenta_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/storage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1873"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
            app:layout_constraintVertical_bias="0.25" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MB"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/storage2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/storage2"
            app:layout_constraintTop_toTopOf="@+id/storage2"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/optRoundCardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineBot"
        app:layout_constraintVertical_bias="1.0"
        app:optRoundCardBackgroundColor="#0073D7"
        app:optRoundCardCornerRadius="30dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false">
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/ic_optimization_background">-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_cardview_gradient">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/optimize_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="23dp"
                    android:background="@drawable/ic_lime_gradient"
                    android:clipToPadding="false"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/optimize_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:padding="15dp"
                    app:cornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineCenterInside"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalInside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guidelineInside">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/storage_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|top"
                            android:layout_marginTop="10dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/ic_storage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:src="@drawable/ic_storage" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/storage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="1823"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="35dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center_horizontal"
                            android:text="Storage"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/storage_mb"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="1873 MB/ 2.7 GB"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineCenterInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guidelineVerticalInside"
                    app:layout_constraintTop_toTopOf="@+id/guidelineInside">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/ram_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|top"
                            android:layout_marginTop="10dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/ic_ram"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:src="@drawable/ic_ram" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/ram"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="65%"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="35dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center_horizontal"
                            android:text="Ram Usage"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/ram_mb"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="1873 MB/ 2.7 GB"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </FrameLayout>
                </androidx.cardview.widget.CardView>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVerticalInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.32" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenterInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
<!--        </LinearLayout>-->
    </com.github.captain_miao.optroundcardview.OptRoundCardView>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>